Chemin fichiers dynamiques

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cmake.configureOnOpen": false,
     "files.associations": {
-        "mysql.h": "c"
+        "mysql.h": "c",
+        "stdio.h": "c",
+        "gtk.h": "c"
     }
 }
